--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,7 @@
     <SearchView
         android:id="@+id/actvtyLogin_searchView_id"
         android:layout_width="match_parent"
-        android:layout_height="53dp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="0dp"
+        android:layout_height="wrap_content"
         android:background="@color/offwhite"
         android:layoutDirection="rtl"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,6 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
+        android:layout_marginTop="16dp"
         android:layout_width="412dp"
         android:layout_height="611dp"
         android:layout_marginEnd="8dp"
